# python-project-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  devenv.nix  devenv.yaml  docker-compose.yml  docker_start.sh  pyproject.toml  readme.md  start.sh
.github/workflows/: code_validation.yml
app/tests/: test_main.py
