[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.112.2",
    # "pytest-watch>=4.2.0",
    "pytest>=8.3.2",
    "ruff>=0.6.3",
    "uvicorn>=0.30.6",
]
